--- a/Homework/[skylar75].hw3.html
+++ b/Homework/[skylar75].hw3.html
@@ -6,8 +6,11 @@
   </head>
 <body>
   <fieldset>
-    <input type="text"name
-<textarea name="comments" id="comments" cols="40" rows="2"> Enter your comments here</textarea>
+    <legend> Basic information</legend>
+<input type="radio" id="firstname" name="person" value="firstname"
+<textarea name="comments" id="comments" cols="40" rows="2">
+  <legend>First Name:<input type="text" name="name" id="fname"></label>
+</textarea>
 <button> Submit </button>
-  </fieldset>
+</fieldset>
   <html>
