1 file modified, 2 added

--- a/Lab2/index.html
+++ b/Lab2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
- <html lang="en"
+ <html lang="en">
   <head>
    <title>Skylar Mosher</title>
     <meta charset="utf-8">
@@ -7,7 +7,17 @@
   <body>
    <header>
      <h1> A Brief Introduction</h1>
-     
+   </header>
+   <nav>
+     <a herf= "aboutme.html">About Me</a>&nbsp;
+     <a herf= "projectshowcase.html">Project Showcase</a>&nbsp;
+   </nav>
+<p>
+  I am currently in my last semster of Junior Year at UAB. I enjoy more simple things in life like naps, watching youtube and just spending time with people close to me. 
+</p>
+</head>
+
+   
       
 
 
