--- a/HW2/music.html
+++ b/HW2/music.html
@@ -1,1 +1,39 @@
 <!DOCTYPE html>
+<html lang="en">
+ <head>
+  <meta charset="utf-8">
+   <title>JavaJam Coffee Bar</title>
+ </head>
+ <body>
+   <h1>JavaJam Coffe Bar</h1>
+   <div>
+     <nav>
+       <a href= "index.html">Home</a>&nbsp;
+       <a href= "menu.html">Menu</a>&nbsp;
+       <a href= "music.html">Music</a>&nbsp;
+       <a href= "jobs.html">Jobs</a>&nbsp;
+     </nav>
+   </div>
+  <h2>Relax at JavaJam</h2>
+    <main>
+      <p>Friendly and eclectic - JavaJam Coffee Bar is the perfect place to take a break, enjoy a refreshing beverage, and have a snack or light meal.</p>
+      <u1>
+        <Li>Speciality Coffee and Organic Tea</Li>
+        <Li>Bagels, Muffins, and Gluten-free Pastries</Li>
+        <Li>Organic Salads</Li>
+        <Li>Music and Poetry Readings</Li>
+      </ul>
+      <div>
+        <p>
+          12010 Garrett Bay Road <br>
+          Ellison Bay, WI 54210<br>
+          888-555-5555
+        </p>
+      </div>
+    </main>
+  <footer><small><l>
+    Copyright @ 2023 JavaJam Coffee Bar <br>
+    <a href="mailto:skylarmosher2019@gmail.com?Subject=Contact us$body=Hello">skylarmosher2019@gmail.com</a>
+  </footer></small><i>
+  </body>
+</html>
