--- a/HW2/index.html
+++ b/HW2/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
-<html lang="en"
+<html lang="en">
  <head>
+  <meta charset="utf-8">
    <title>JavaJam Coffee Bar</title>
+ </head>
+ <body>
    <h1>JavaJam Coffe Bar</h1>
    <div>
      <nav>
-       <a herf= "index.html">Home</a>&nbsp;
-       <a herf= "menu.html">Menu</a>&nbsp;
-       <a herf= "music.html">Music</a>&nbsp;
-       <a herf= "jobs.html">Jobs</a>&nbsp;
+       <a href= "index.html">Home</a>&nbsp;
+       <a href= "menu.html">Menu</a>&nbsp;
+       <a href= "music.html">Music</a>&nbsp;
+       <a href= "jobs.html">Jobs</a>&nbsp;
      </nav>
    </div>
-  </head>
-  <body>
-    <h2>Relax at JavaJam</h2>
+  <h2>Relax at JavaJam</h2>
     <main>
       <p>Friendly and eclectic - JavaJam Coffee Bar is the perfect place to take a break, enjoy a refreshing beverage, and have a snack or light meal.</p>
       <u1>
-        <li>Speciality Coffee and Organic Tea</li>
-        <li>Bagels, Muffins, and Gluten-free Pastries</li>
-        <li>Organic Salads</li>
-        <li>Music and Poetry Readings</li>
+        <Li>Speciality Coffee and Organic Tea</Li>
+        <Li>Bagels, Muffins, and Gluten-free Pastries</Li>
+        <Li>Organic Salads</Li>
+        <Li>Music and Poetry Readings</Li>
       </ul>
       <div>
         <p>
@@ -30,11 +31,13 @@
         </p>
       </div>
     </main>
-  </body>
   <footer><small><l>
     Copyright @ 2023 JavaJam Coffee Bar <br>
     <a href="mailto:skylarmosher2019@gmail.com?Subject=Contact us$body=Hello">skylarmosher2019@gmail.com</a>
-    
+  </footer></small><i>
+  </body>
+</html>
+
 
 
 
