--- a/HW2/menu.html
+++ b/HW2/menu.html
@@ -1,2 +1,50 @@
 <!DOCTYPE html>
-<html lang="en"
+<html lang="en">
+ <head>
+  <meta charset="utf-8">
+   <title>JavaJam Coffee Bar</title>
+ </head>
+ <body>
+   <h1>JavaJam Coffe Bar</h1>
+   <div>
+     <nav>
+       <a href= "index.html">Home</a>&nbsp;
+       <a href= "menu.html">Menu</a>&nbsp;
+       <a href= "music.html">Music</a>&nbsp;
+       <a href= "jobs.html">Jobs</a>&nbsp;
+     </nav>
+   </div>
+  <h2>Coffee at JavaJam</h2>
+    <main><strong>
+      <dt>Just Java</dt>
+    </strong>
+      <dd>
+        Regular House Blend, decaffeinated coffee, or the flavor of the day.<br>
+        Endless Coffee $3.50
+        <strong>
+        <dt>Cafe au Lait</dt>
+        </strong>
+        <dd>
+        House Blended coffee infused into a smooth, steamed milk.<br>
+      Single $4.00 Double $5.00
+      <strong>
+        <dt>Iced Cappuccino</dt>
+      </strong>
+      <dd>
+        Sweetened espresso blended with icy-cold milk and served in a chilled glass.<br>
+      Single $5.00 Double $6.50
+       </dd>
+      <div>
+        <p>
+          12010 Garrett Bay Road <br>
+          Ellison Bay, WI 54210<br>
+          888-555-5555
+        </p>
+      </div>
+    </main>
+  <footer><small><l>
+    Copyright @ 2023 JavaJam Coffee Bar <br>
+    <a href="mailto:skylarmosher2019@gmail.com?Subject=Contact us$body=Hello">skylarmosher2019@gmail.com</a>
+  </footer></small><i>
+  </body>
+</html>
