--- a/HW2/jobs.html
+++ b/HW2/jobs.html
@@ -5,7 +5,7 @@
    <title>JavaJam Coffee Bar</title>
  </head>
  <body>
-   <h1>JavaJam Coffe Bar</h1>
+   <h1>JavaJam Coffee Bar</h1>
    <div>
      <nav>
        <a href= "index.html">Home</a>&nbsp;
@@ -14,16 +14,26 @@
        <a href= "jobs.html">Jobs</a>&nbsp;
      </nav>
    </div>
-  <h2>Relax at JavaJam</h2>
-    <main>
-      <p>Friendly and eclectic - JavaJam Coffee Bar is the perfect place to take a break, enjoy a refreshing beverage, and have a snack or light meal.</p>
-      <u1>
-        <Li>Speciality Coffee and Organic Tea</Li>
-        <Li>Bagels, Muffins, and Gluten-free Pastries</Li>
-        <Li>Organic Salads</Li>
-        <Li>Music and Poetry Readings</Li>
-      </ul>
-      <div>
+   <h2>Work at JavaJam</h2>
+    <main><h3>
+      <dt>Barista</dt>
+    </h3>
+    <p> Baristas at JavaJam are modern artist of food. At JavaJam you will learn about new and inovate ways to make our classic flavors, you are not just a Barista at JavaJam but a painter of coffee. Hourly wage: $12
+      <ul>
+        <li> Taking orders of customers in a timely manner
+          <li> Checking the quality of ingredients, and restocking the store weekly. 
+          <li> Closing and cleaning the bar when necessary. 
+            <li> Appropriate paper work for opening and closing duties. 
+           </ul>
+           <h3>
+           <dt> Store Manager</dt>
+          </h3>
+    <p> The position of Store Manager is very simple at the JavaJam Coffee Bar, as Store Manager you uplift your associates and create a calming yet fun environment for everyone in the story. Just like baristas you most stay on top of the lastest trends of drinks and perfecting the craft every day. Hourly wage: $16
+      <ul>
+        <li> Checking daily for the satification of customers and cleanliness of the store.
+          <li> Inventory check weekly to insure adquet stock of products. 
+          </ul>
+       <div>
         <p>
           12010 Garrett Bay Road <br>
           Ellison Bay, WI 54210<br>
@@ -36,4 +46,3 @@
     <a href="mailto:skylarmosher2019@gmail.com?Subject=Contact us$body=Hello">skylarmosher2019@gmail.com</a>
   </footer></small><i>
   </body>
-</html>
