--- a/HW2/music.html
+++ b/HW2/music.html
@@ -5,7 +5,7 @@
    <title>JavaJam Coffee Bar</title>
  </head>
  <body>
-   <h1>JavaJam Coffe Bar</h1>
+   <h1>JavaJam Coffee Bar</h1>
    <div>
      <nav>
        <a href= "index.html">Home</a>&nbsp;
@@ -14,16 +14,17 @@
        <a href= "jobs.html">Jobs</a>&nbsp;
      </nav>
    </div>
-  <h2>Relax at JavaJam</h2>
+  <h2>Upcoming Music at JavaJam</h2>
     <main>
-      <p>Friendly and eclectic - JavaJam Coffee Bar is the perfect place to take a break, enjoy a refreshing beverage, and have a snack or light meal.</p>
-      <u1>
-        <Li>Speciality Coffee and Organic Tea</Li>
-        <Li>Bagels, Muffins, and Gluten-free Pastries</Li>
-        <Li>Organic Salads</Li>
-        <Li>Music and Poetry Readings</Li>
-      </ul>
-      <div>
+      <table>
+      <tr>
+        <td colspan="3">This months Shows</td> 
+        <td rowspan="5"></td>
+        <th>Name</th>
+        <th>Event Time</th>
+        <th>Event Description
+        </tr>   
+        <tr>    
         <p>
           12010 Garrett Bay Road <br>
           Ellison Bay, WI 54210<br>
