--- a/HW2/music.html
+++ b/HW2/music.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <head>
   <meta charset="utf-8">
-   <title>JavaJam Coffee Bar</title>
+   <title>JavaJam Coffee Bar-Music</title>
  </head>
  <body>
    <h1>JavaJam Coffee Bar</h1>
@@ -17,24 +17,48 @@
   <h2>Upcoming Music at JavaJam</h2>
     <main>
       <table>
-      <tr>
-        <td colspan="3">This months Shows</td> 
-        <td rowspan="5"></td>
-        <th>Name</th>
-        <th>Event Time</th>
-        <th>Event Description
-        </tr>   
-        <tr>    
-        <p>
-          12010 Garrett Bay Road <br>
-          Ellison Bay, WI 54210<br>
-          888-555-5555
-        </p>
-      </div>
-    </main>
-  <footer><small><l>
-    Copyright @ 2023 JavaJam Coffee Bar <br>
-    <a href="mailto:skylarmosher2019@gmail.com?Subject=Contact us$body=Hello">skylarmosher2019@gmail.com</a>
-  </footer></small><i>
-  </body>
-</html>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Event Time</th>
+          <th>Event Description</th>
+          <tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Peaceful Storm</td>
+              <td>March 9, 2023, 6:00pm</td>
+              <td> In-house Lofi
+              </tr>
+              <tr>
+                <td> Crush the Rocks</td>
+                <td>April 18, 2023, 9:00pm</td>
+                <td>Nu-wave Metal
+                </tr>
+                <tr>
+                  <td>Stars in the Sky</td>
+                    <td>May 5, 2023, 11:00pm</td>
+                    <td> Classic Jazz
+                    </tr>
+                  </tr>
+                  <tr>
+                    <td> Peaches and Milk</td>
+                    <td> July 15th, 2023, 1:30pm</td>
+                    <td> Early 2010's Pop
+                    </tr>
+                    <tr>
+                      <td> Salt Shakers</td>
+                        <td> January 21, 2024, 2:00pm</td>
+                        <td> Rock</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </main>
+
+              <footer>
+                <small><i>
+
+
+            
+    
+ 
