4 files modified, 1 added

--- a/HW2/music.html
+++ b/HW2/music.html
@@ -3,6 +3,7 @@
  <head>
   <meta charset="utf-8">
    <title>JavaJam Coffee Bar-Music</title>
+   <link rel="stylesheet" href="javajam.css">
  </head>
  <body>
    <h1>JavaJam Coffee Bar</h1>
