--- a/HW2/index.html
+++ b/HW2/index.html
@@ -3,6 +3,7 @@
  <head>
   <meta charset="utf-8">
    <title>JavaJam Coffee Bar</title>
+   <link rel="stylesheet" href="javajam.css">
  </head>
  <body>
    <h1>JavaJam Coffe Bar</h1>
