--- a/Lab2/index.html
+++ b/Lab2/index.html
@@ -9,12 +9,17 @@
      <h1> A Brief Introduction</h1>
    </header>
    <nav>
-     <a herf= "aboutme.html">About Me</a>&nbsp;
-     <a herf= "projectshowcase.html">Project Showcase</a>&nbsp;
+     <a href= "aboutme.html">About Me</a>&nbsp;
+     <a href= "projectshowcase.html">Project Showcase</a>&nbsp;
+     <a href="index.html">Index</a>&nbsp;
    </nav>
 <p>
   I am currently in my last semster of Junior Year at UAB. I enjoy more simple things in life like naps, watching youtube and just spending time with people close to me. 
 </p>
+<footer><small><l>
+Copyright @ 2023 <br>
+<a href="mailto:skylarmosher2019@gmail.com?Subject=Contact us$body=Hello">skylarmosher2019@gmail.com</a>
+</footer></small><i>
 </head>
 
    
