--- a/Lab2/aboutme.html
+++ b/Lab2/aboutme.html
@@ -6,4 +6,23 @@
   </head>
   <body>
     <header>
-      <h1>
+    <h1>JavaJam Coffe Bar</h1>
+      <div>
+        <nav>
+          <a href= "index.html">Home</a>&nbsp;
+          <a href= "menu.html">Menu</a>&nbsp;
+          <a href= "music.html">Music</a>&nbsp;
+          <a href= "jobs.html">Jobs</a>&nbsp;
+        </nav>
+      </div>
+     <h2>Relax at JavaJam</h2>
+       <main>
+         <p>Friendly and eclectic - JavaJam Coffee Bar is the perfect place to take a break, enjoy a refreshing beverage, and have a snack or light meal.</p>
+         <u1>
+           <Li>Speciality Coffee and Organic Tea</Li>
+           <Li>Bagels, Muffins, and Gluten-free Pastries</Li>
+           <Li>Organic Salads</Li>
+           <Li>Music and Poetry Readings</Li>
+         </ul>
+         <div>
+           <p>
