--- a/Lab2/aboutme.html
+++ b/Lab2/aboutme.html
@@ -6,23 +6,28 @@
   </head>
   <body>
     <header>
-    <h1>JavaJam Coffe Bar</h1>
+    <h1>About Me</h1>
       <div>
         <nav>
-          <a href= "index.html">Home</a>&nbsp;
-          <a href= "menu.html">Menu</a>&nbsp;
-          <a href= "music.html">Music</a>&nbsp;
-          <a href= "jobs.html">Jobs</a>&nbsp;
+          <a href= "index.html">Home Page</a>&nbsp;
+          <a href= "menu.html">Project Showcase</a>&nbsp;
+          <a href= "aboutme">About Me</a>&nbsp;
         </nav>
       </div>
-     <h2>Relax at JavaJam</h2>
+     <h2>Hobbies</h2>
        <main>
-         <p>Friendly and eclectic - JavaJam Coffee Bar is the perfect place to take a break, enjoy a refreshing beverage, and have a snack or light meal.</p>
+         <p>I have always enjoyed this world of technology, but I gained a real apperication of it when I start a robotics class in 7th grade.This is where I finally saw that the world of the internet was not only for entertainment but as a place to create whatever I truly wanted to.</p>
          <u1>
-           <Li>Speciality Coffee and Organic Tea</Li>
-           <Li>Bagels, Muffins, and Gluten-free Pastries</Li>
-           <Li>Organic Salads</Li>
-           <Li>Music and Poetry Readings</Li>
+           <Li>Playing Video Games</Li>
+           <Li>Baking,Cooking</Li>
+           <Li>Spending time with loved ones</Li>
+           <Li>Handmaking Blankets
          </ul>
          <div>
-           <p>
+         </p>
+         <footer><small><l>
+         Copyright @ 2023 <br>
+         <a href="mailto:skylarmosher2019@gmail.com?Subject=Contact us$body=Hello">skylarmosher2019@gmail.com</a>
+         </footer></small><i>
+         </head>
+         </html>
