--- a/Lab2/index.html
+++ b/Lab2/index.html
@@ -13,6 +13,7 @@
      <a href= "projectshowcase.html">Project Showcase</a>&nbsp;
      <a href="index.html">Index</a>&nbsp;
    </nav>
+   <div>
 <p>
   I am currently in my last semster of Junior Year at UAB. I enjoy more simple things in life like naps, watching youtube and just spending time with people close to me. 
 </p>
@@ -20,7 +21,9 @@
 Copyright @ 2023 <br>
 <a href="mailto:skylarmosher2019@gmail.com?Subject=Contact us$body=Hello">skylarmosher2019@gmail.com</a>
 </footer></small><i>
+</div>
 </head>
+</html>
 
    
       
