--- a/Lab2/projectshowcase.html
+++ b/Lab2/projectshowcase.html
@@ -1,5 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+ <html lang="en">
   <head>
-    <title>Project Showcase</title>
+   <title>Skylar Mosher</title>
+    <meta charset="utf-8">
+    </head>
+  <body>
+   <header>
+     <h1> Project Showcase</h1>
+   </header>
+   <div>
+   <nav>
+     <a href= "aboutme.html">About Me</a>&nbsp;
+     <a href= "projectshowcase.html">Project Showcase</a>&nbsp;
+     <a href="index.html">Index</a>&nbsp;
+     <a href="https://github.com/skylar0223/UABCS221.git">Github</a>&nbsp;
+   </nav>
+   </div>
+<footer><small><l>
+Copyright @ 2023 <br>
+<a href="mailto:skylarmosher2019@gmail.com?Subject=Contact us$body=Hello">skylarmosher2019@gmail.com</a>
+</footer></small><i>
+</head>
+</html>
     
