--- a/skylar75.hw5.html
+++ b/skylar75.hw5.html
@@ -6,11 +6,10 @@
    <link rel="stylesheet" href="skylar75.hw5.css">
  </head>
  <body>
-   <h1>Box Model Homework</h1>
+   <h1>Header</h1>
     <main>
-      <p>Friendly and eclectic - JavaJam Coffee Bar is the perfect place to take a break, enjoy a refreshing beverage, and have a snack or light meal.</p>
-      <footer><small><l>
+      <p>main</p>
+      <footer>
         Copyright @ 2023 <br>
-        </footer></small><i>
-        </head>
+        </footer>
         </html>
