--- a/Lab2/aboutme.html
+++ b/Lab2/aboutme.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>About Me</title>
+    <link rel="stylesheet" href="personal.css">
     <meta charset="utf-8">
   </head>
   <body>
