--- a/Lab2/projectshowcase.html
+++ b/Lab2/projectshowcase.html
@@ -2,6 +2,7 @@
  <html lang="en">
   <head>
    <title>Skylar Mosher</title>
+   <link rel="stylesheet" href="personal.css">
     <meta charset="utf-8">
     </head>
   <body>
