--- a/Homework/skylar75.hw6.html
+++ b/Homework/skylar75.hw6.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="utf-8">
    <title>Display Model</title>
-   <link rel="stylesheet" href="skylar75.hw6.css">
+   <link rel="stylesheet" type="text/css" href="skylar75.hw6.html"/> 
  </head>
  <body>
    <h1>Header</h1>
