--- a/Lab5/aboutme.html
+++ b/Lab5/aboutme.html
@@ -14,6 +14,7 @@
           <a href= "aboutme">About Me</a>&nbsp;
         </nav>
       </div>
+    </header>
      <h2>Hobbies</h2>
        <main>
          <p>I have always enjoyed this world of technology, but I gained a real apperication of it when I start a robotics class in 7th grade.This is where I finally saw that the world of the internet was not only for entertainment but as a place to create whatever I truly wanted to.</p>
