3 files modified, 1 added, 1 deleted

--- a/Lab5/aboutme.html
+++ b/Lab5/aboutme.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header>
-    <h1>About Me</h1>
-        <nav>
+    <h1>About Me <img src="img/littleflower.png"></h1>
+        <nav> 
           <a href= "index.html">Home Page</a>&nbsp;
           <a href= "menu.html">Project Showcase</a>&nbsp;
           <a href= "aboutme">About Me</a>&nbsp;
@@ -27,8 +27,8 @@
          <div>
          </p>
          <footer><small><l>
-         Copyright @ 2023 <br>
-         <a href="mailto:skylarmosher2019@gmail.com?Subject=Contact us$body=Hello">skylarmosher2019@gmail.com</a>
+          <a href="mailto:skylarmosher2019@gmail.com?Subject=Contact us$body=Hello">skylarmosher2019@gmail.com</a>
+     </form>
          </footer></small><i>
          </head>
          </html>
