--- a/Lab5/index.html
+++ b/Lab5/index.html
@@ -20,7 +20,11 @@
 </p>
 <footer><small><l>
 Copyright @ 2023 <br>
-<a href="mailto:skylarmosher2019@gmail.com?Subject=Contact us$body=Hello">skylarmosher2019@gmail.com</a>
+Information input <br>
+<form action="https://formsubmit.co/your@email.com" method="POST">
+ <input type="text" name="name" required>
+ <input type="email" name="email" required>
+ <button type="submit">Send</button>
 </footer></small><i>
 </div>
 </head>
