--- a/Lab5/aboutme.html
+++ b/Lab5/aboutme.html
@@ -3,8 +3,9 @@
   <head>
     <title>About Me</title>
     <link rel="stylesheet" href="portfolio.css">
-    <meta charset="utf-8">
-  </head>
+    <meta charset="utf-8"
+    meta name="viewport" content="width=device-width, initial-scale=480px minimum-scale=1.6, maximum-scale=,3 user-scalable=yes">
+    </head>
   <body>
     <header>
     <h1>About Me <img src="img/littleflower.png"></h1>
